grid size adjuster & mouseover effect added

--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
 </head>
 <body>
     <div class="container">
+        <div class="main-left">
+            <div class="board"></div>
+        </div>
+        <div class="main-right">
+            <button id="resize-btn">RESIZE GRID</button>
+        </div>
 
     </div>
     
